--- a/src/packages/modules/language-interstitial-z5/css/language-interstitial-z5.scss
+++ b/src/packages/modules/language-interstitial-z5/css/language-interstitial-z5.scss
@@ -1,7 +1,7 @@
 @import "../../../common/css/_base/variables";
 @import "../../../common/css/_base/mixins";
 
-.module-li {
+.language-interstitial {
   .module-li-bg {
     background-color: #4a5676;
   }
@@ -36,23 +36,21 @@
       margin-bottom: 26px;
     }
   }
-}
-
-.btn-holder {
-  .btn {
-    margin-right: 20px;
+  .btn-holder {
+    .btn {
+      margin-right: 20px;
+    }
   }
-}
-
-.module-li-main {
-  padding: 60px 0 70px 0;
-  p {
-    color: $gray40;
-  }
-  .module-text-box {
-    width: 478px;
-    h4 {
-      color: $gray20;
+  .module-li-main {
+    padding: 60px 0 70px 0;
+    p {
+      color: $gray40;
+    }
+    .module-text-box {
+      width: 478px;
+      h4 {
+        color: $gray20;
+      }
     }
   }
 }
